--- a/wp-content/themes/teamlab-blog-2-0/style.css
+++ b/wp-content/themes/teamlab-blog-2-0/style.css
@@ -17,6 +17,8 @@ h1, h2, h3, h4, h5, h6 {
 #post-content .content h3 {
     font-size: 24px;
     line-height: 33px;
+    font-style: normal;
+    font-weight: 600;
 }
 blockquote {
   border-left: 3px solid #FF6F3D;
