--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -179,7 +179,7 @@
 .tagsList .tagItem{
     display:inline-block;
     background-color:#F2F2F2;
-    margin-right: 8px;
+    margin-right: 4px;
     margin-bottom: 8px;
 }
 
@@ -1570,8 +1570,10 @@ a.download:active{
     font-weight: normal;
     font-size: 16px;
     line-height: 22px;
-
     color: #333333;
+}
+.useful-links p:last-child{
+    margin-bottom: 0;
 }
 .useful-links h3{
     font-family: Open Sans;
@@ -1586,6 +1588,7 @@ a.download:active{
     background-size: 23px;
     background-position: 0 50%;
     background-repeat: no-repeat;
+    margin-top: 0 !important;
 }
 /*-----------Share button--------*/
 .a2a_kit{
