--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -1293,22 +1293,27 @@ a.download:active{
 }
 /*-----------Cloud block--------*/
 .cloud-block{
+    box-sizing: border-box;
     position: relative;
-    padding-top: 21px;
+    padding-top: 10px;
     width: 100%;
-    height: 251px;
-    background: url(../images/cloud-block.svg) no-repeat  50% 21px;
+    height: 300px;
+    background: url(../images/cloud-block.svg) no-repeat  50% 10px;
+    background-size: 689px 186px;
     background-color: #F8F8F8;
     
 }
 .content .cloud-block .red{
-    text-transform: none;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-style: normal;
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 24px;
+    bottom: 25px;
     max-width: 240px;
     margin: auto;
+    padding: 20px;
 }
 .PostContainer .cloud-block{
     max-width: 736px;
