--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -212,14 +212,15 @@
 }
 
 .input-header .search-field{
+    box-sizing: border-box;
     background-color: #fff;
     background: url('../images/search.svg') no-repeat;
     background-position: 95% center;
     background-repeat: no-repeat;
     background-size: 18px 20px;
     cursor: text;
-    height: 41px;
-    width: 221px;
+    height: 40px;
+    width: 241px;
     padding: 0 0 0 16px;
     -webkit-transition: width 100ms ease, background 100ms ease;
     transition: width 100ms ease, background 100ms ease;
@@ -238,17 +239,19 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    text-overflow: ellipsis;
 }
 /* WebKit, Edge */
-::-webkit-input-placeholder {
+.input-header .search-field::-webkit-input-placeholder {
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    text-overflow: ellipsis;
 }
 
 /* Firefox 4-18 */
@@ -257,8 +260,10 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    opacity: 1;
+    text-overflow: ellipsis;
 }
 
 /* Firefox 19+ */
@@ -267,8 +272,10 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    opacity: 1;
+    text-overflow: ellipsis;
 }
 
 /* IE 10-11 */
@@ -277,8 +284,9 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    text-overflow: ellipsis;
 }
 
 /* Edge */
@@ -287,19 +295,11 @@
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    line-height: 160%;
+    line-height: 280%;
     color: #919192;
+    text-overflow: ellipsis;
 }
 
-/* MODERN BROWSER */
-.input-header .search-field::placeholder { 
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 160%;
-    color: #919192;
-}
 /*-----------Main Container--------*/
 .MainContainer {
     max-width: 1120px;
